# ray_distributed_computing

./: .env.example  docker-compose.yml  pyproject.toml
src/: anomaly_detector.py  cluster.py  config.py  data_generator.py  db.py  log_processor.py  logger.py  main.py
